rename to/BSDCONV-STDOUT to to/BSDONV-OUTPUT and allow switch to write to stderr

--- a/doc/tex/bsdconv.tex
+++ b/doc/tex/bsdconv.tex
@@ -253,7 +253,7 @@ basicstyle=\ttfamily
 						\hline
 						ID & Description & Provider(from) & Consumer(to)\\
 						\hline
-						00 & Bsdconv special characters & BSDCONV\_KEYWORD & BSDCONV\_KEYWORD\\
+						00 & Bsdconv special characters & BSDCONV-KEYWORD & BSDCONV-KEYWORD\\
 						01 & Unicode & Most decoders & Most encoders\\
 						02 & CNS11643\footnotemark[1] & CNS11643 & CNS11643\\
 						03 & Byte & BYTE; ESCAPE & BYTE; ESCAPE\#FOR=BYTE\\
@@ -431,7 +431,7 @@ basicstyle=\ttfamily
 
 		\subsection{Helper codecs}
 			\paragraph{}
-			Codec from/bsdconv can be used to input internal data structure, and codec to/bsdconv\_stdout can be used to inspect type and flags.
+			Codec from/bsdconv can be used to input internal data structure, and codec to/BSDCONV-OUTPUT can be used to inspect type and flags.
 
 	\section{C Programming guide}
 		\subsection{Conversion instance lifecycle}
