--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 11.6:
 	add from/JIS (including JIS0201/JIS0208/JIS0212)
+	add from/CP950-UDA
+	from/FALLBACK-UNICODE
+	fix bug in from/_CP936
 
 11.5:
 	add inter/NULL
