manpages update for _CP950/CP950-UDA

--- a/modules/from/_CP950.man
+++ b/modules/from/_CP950.man
@@ -1,4 +1,5 @@
 #traditional chinese
+
 EXAMPLE
 	#ascii is excluded, use same name without '_' prefixed to get ascii involved
 	> perl -e 'print "\xa5\x5c\xaf\xe0"' | bsdconv _cp950:utf-8
@@ -12,3 +13,6 @@ EXAMPLE
 	#cp950_trans is for transliteration
 	> echo 测试 | bsdconv utf-8:big5,cp950_trans | hexdump -C
 	00000000  b4 fa b8 d5 0a                                    |.....|
+
+SEEALSO
+	from/CP950-UDA for UDA to PUA
