--- a/Changelog
+++ b/Changelog
@@ -5,6 +5,7 @@
 	from/FALLBACK-UNICODE
 	fix bug in from/{_CP936,_CP874,_CP1253}
 	add CESU/LOOSE/NUL/OVERLONG/SUPER parameters to from/_UTF-8
+	add inter/KANJI
 
 11.5:
 	add inter/NULL
