--- a/modules/to/ANY.man
+++ b/modules/to/ANY.man
@@ -9,6 +9,8 @@ OUTPUT
 ARGUMENT
 	ERROR
 		DESC	Increase counter (OERR if no counter name specified)
+	DROP
+		DESC	Don't output any data
 	$DataList
 		DESC	Output value
 		EXAMPLE	3F
