--- a/Changelog
+++ b/Changelog
@@ -7,6 +7,7 @@
 	add CESU/LOOSE/NUL/OVERLONG/SUPER parameters to from/_UTF-8
 	add inter/KANJI
 	add from/HEX, to/HEX
+	add inter/ASCIIFOLD
 
 11.5:
 	add inter/NULL
